# SchoolProjects

./: .gitignore  Odpady hutnicze oraz metody ich powtórnego wykorzystania.pptx  README.md
ASM/CalculatePIUsingLeibniz/: README.md  ak.s  main.c  make_c_and_run.sh
ASM/GCDIteratively/: README.md  ak.s  make_c_and_run.sh
ASM/GCDRecursivelyWithStackPointerPrint/: README.md  ak.s  main.c  make_shared_and_run.sh
C++/AlgorithmsAndDataStructures/List/: main.cpp  task.txt
C++/AlgorithmsAndDataStructures/SortingAlgorithm/: CMakeLists.txt  main.cpp
C++/AlgorithmsAndDataStructures/Trees/: CMakeLists.txt
C++/OpenGL/: main.cpp  toolchain-mingw64.cmake
C++/OpenGL/Learning/: CMakeLists.txt  README.md  TODO.md  build-windows-native.bat  gladEnumParser.py  main.cpp
C++/OpenGL/Learning/src/: color.cpp  model_view_projection.cpp  texture.cpp  transformation.cpp
C++/OpenGL/Learning/src/drawable/: drawable.cpp  obj_loader.cpp  primitive.cpp  shape3d.cpp
C++/OpenGL/Learning/src/drawable/shape/2d/: complex.cpp  primitive.cpp
C++/OpenGL/Learning/src/headers/: color.h  config.h  consts.h  model_view_projection.h  texture.h  transformation.h
C++/OpenGL/Learning/src/headers/drawable/: drawable.h  obj_loader.h  primitive.h  shape3d.h
C++/OpenGL/Learning/src/headers/drawable/shape/2d/: complex.h  primitive.h
C++/OpenGL/Learning/src/headers/logging/: logging.h
C++/OpenGL/Learning/src/headers/mygl/: consts.h  texture.h
C++/OpenGL/Learning/src/headers/mygl/debug/: debug.h
C++/OpenGL/Learning/src/headers/mygl/shader/: shader.h
C++/OpenGL/Learning/src/headers/raw/: coordinates.h
C++/OpenGL/Learning/src/headers/shape/: complex.h  primitive.h
C++/OpenGL/Learning/src/logging/: logging.cpp
C++/OpenGL/Learning/src/mygl/: texture.cpp
C++/OpenGL/Learning/src/mygl/debug/: debug.cpp
C++/OpenGL/Learning/src/mygl/primitive/: primitive.cpp
C++/OpenGL/Learning/src/mygl/shader/: 7.1.lighting.cubes.shader  9.moving_circle.shader  99.rotating_textured_cube.shader  99.transforming_triangles.shader  my_first_3d!.shader  rotating_cube.shader  shader.cpp  transforming_triangles.shader
C++/OpenGL/Learning/src/shape/: complex.cpp
C++/OpenGL/build-msvc/: CMakeCache.txt  cmake_install.cmake
C++/OpenGL/src/: stb_image.cpp
C++/SortingAlgorithm/: main.cpp
C++/Trees/: main.cpp
C/CalculationOptimizations/: README.md  main.c
CalculationOptimizations/: README.md  data collected.xlsx  eval_time.c  eval_time.h  make_c_and_run.sh
Java/LightWakeUpAlarm/: AndroidManifest.xml
Java/StorageUtility/storageutilitybackend/: pom.xml  swagger.txt
MATLAB/: Trajectory_Generation.m  calculate_M_C.m  caluclate_ang_accel.m  direct_2DoF.m  dynamic_2DoF.m  dynamic_2DoF_with_free_base.m  get_free_float_M_C.m  inverse_2DoF.m  inverse_dynamic_2DoF_calculate_moment.m  l2.m  l3.m  l4.m  main.m  my_trajectory_generation.m  run_direct_2DoF_on_trajectory.m  run_indirect_2DoF_on_trajectory.m  run_inverse_dynamic_2DoF_calculate_moment.m
Python/FEMSimulation/: main.py  matrix.py
Python/FEMSimulation/grid/: universal_element.py
Python/FEMSimulation/material/: material.py
Python/FemSimulator/: integral.py  simulation.py  vtk_file_format.py
Python/FemSimulator/grid/: grid.py
WebGl/: server.py
WebGl/static/: app.js  color.js  debug.js  index.html  matrix.js  mvp.js  style.css  textOverlay.js  texture.js  transformer.js
WebGl/static/drawable/: loadFromObj.js
(+89 files in other folders)
